# mtg_collection

./: .gitignore  README.md  dev_setup.sh  hello.py  pyproject.toml
src/: commands.py  data_commands.py  main.py
src/api/: scryfall_api.py
src/database/: db_conn.py  db_setup.py  models.py
test/: test_commands.py  test_db.py  test_scryfall_api.py
