[project]
name = "mtg-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pytest>=8.3.4",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
]

[tool.ruff]
# Allow lines to be up to 120 characters
line-length = 120
